[gd_scene load_steps=30 format=2]

[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_000.png" type="Texture" id=1]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_001.png" type="Texture" id=2]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_004.png" type="Texture" id=3]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_002.png" type="Texture" id=4]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_003.png" type="Texture" id=5]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_005.png" type="Texture" id=6]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_007.png" type="Texture" id=7]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_006.png" type="Texture" id=8]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_009.png" type="Texture" id=9]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_008.png" type="Texture" id=10]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_010.png" type="Texture" id=11]
[ext_resource path="res://Player/assets/Idle/Wraith_03_Idle_011.png" type="Texture" id=12]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_005.png" type="Texture" id=13]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_011.png" type="Texture" id=14]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_002.png" type="Texture" id=15]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_000.png" type="Texture" id=16]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_001.png" type="Texture" id=17]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_007.png" type="Texture" id=18]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_008.png" type="Texture" id=19]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_010.png" type="Texture" id=20]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_006.png" type="Texture" id=21]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_009.png" type="Texture" id=22]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_004.png" type="Texture" id=23]
[ext_resource path="res://Player/assets/Walking/Wraith_03_Moving Forward_003.png" type="Texture" id=24]
[ext_resource path="res://Player/Player.gd" type="Script" id=25]
[ext_resource path="res://Forest/assets/Layer_0011_0.png" type="Texture" id=26]
[ext_resource path="res://Player/Lantern/assets/spot.png" type="Texture" id=27]
[ext_resource path="res://Player/Lantern/assets/light.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 22.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 22.0
} ]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 25 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
__meta__ = {
"_edit_group_": true
}

[node name="Lantern" type="Node2D" parent="."]
position = Vector2( 66.6667, 36.6667 )

[node name="Sprite" type="Sprite" parent="Lantern"]
visible = false
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 26 )

[node name="LanternLight" type="Light2D" parent="Lantern"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 28 )
color = Color( 1, 0.780392, 0.603922, 1 )
shadow_enabled = true
shadow_color = Color( 1, 1, 1, 0 )

[node name="Sprite" type="Sprite" parent="Lantern/LanternLight"]
texture = ExtResource( 27 )

[node name="FlickerTimer" type="Timer" parent="Lantern/LanternLight"]
wait_time = 0.25

[node name="CanvasModulate" type="CanvasModulate" parent="Lantern"]
scale = Vector2( 0.3, 0.3 )
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -57, -192, -1, -185, 79, -140, 114, -66, 94, 35, 43, 117, -86, 124, -116, 19, -127, -44, -112, -116 )

[connection signal="timeout" from="Lantern/LanternLight/FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
